add basic room functionality
